@@ -1,3 +1,8 @@
+2013-09-04  Per Bothner  <per@bothner.com>
+
+	* misc-test.scm: New test-case from Savannah bug report #39944
+	"Possible bug with omitted keyword arguments" which currently passes.
+
 2013-08-25  Per Bothner  <per@bothner.com>
 
 	* misc-test.scm: Add test that '#' is a terminator.
